--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "graphql": "^16.7.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
